# WidgetsInPygame

./: .gitignore  Pipfile  README.html  README.md  highscore.txt  setup.cfg
demo/: frame_demo.py  little_game.pyw  simple_widgets.py  window_demo.py
doc/html/: annotated.html  annotated_dup.js  classes.html  classwipyg_1_1abstracts_1_1_button-members.html  classwipyg_1_1abstracts_1_1_button.html  classwipyg_1_1abstracts_1_1_button.js  classwipyg_1_1abstracts_1_1_container-members.html  classwipyg_1_1abstracts_1_1_container.html  classwipyg_1_1abstracts_1_1_container.js  classwipyg_1_1abstracts_1_1_grid_container-members.html  classwipyg_1_1abstracts_1_1_grid_container.html  classwipyg_1_1abstracts_1_1_grid_container.js  classwipyg_1_1abstracts_1_1_widget-members.html  classwipyg_1_1abstracts_1_1_widget.html  classwipyg_1_1abstracts_1_1_widget.js  classwipyg_1_1buttons_1_1_cancel_button-members.html  classwipyg_1_1buttons_1_1_cancel_button.html  classwipyg_1_1buttons_1_1_cancel_button.js  classwipyg_1_1buttons_1_1_icon_button-members.html  classwipyg_1_1buttons_1_1_icon_button.html  classwipyg_1_1buttons_1_1_icon_button.js  classwipyg_1_1buttons_1_1_plain_button-members.html  classwipyg_1_1buttons_1_1_plain_button.html  classwipyg_1_1buttons_1_1_plain_button.js  classwipyg_1_1buttons_1_1_submit_button-members.html  classwipyg_1_1buttons_1_1_submit_button.html  classwipyg_1_1buttons_1_1_submit_button.js  classwipyg_1_1containers_1_1_frame-members.html  classwipyg_1_1containers_1_1_frame.html  classwipyg_1_1containers_1_1_frame.js  classwipyg_1_1containers_1_1_window.html  (+17 more)
(+44 files in other folders)
