[metadata]
name = wipyg
version = 0.0.1
author = Chaddaï Fouché
author_email = chaddai.fouche@gmail.com
description = Minimal widgets library for Pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chaddai/WidgetsInPygame
project_urls =
    Bug Tracker = https://github.com/Chaddai/WidgetsInPygame/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src